# gstreamer-test

./: CMakeLists.txt  bin.c  main.c
